--- a/Project/project.css
+++ b/Project/project.css
@@ -255,8 +255,8 @@ body {
 
 
 .footer {
-background-color: rgba(0, 0, 0, 0.941);
-color: white;
+background-color: rgb(246,241,237);
+color: black;
 padding: 20px 0;
 
 }
@@ -269,16 +269,15 @@ max-width: 90%;
 margin: 0 auto;
 padding: 0 20px;
 }
-.footer .logo {
-font-size: 40px;
-font-weight: bold;
+.footer .logo img{
+height: 50px;
 }
 .footer .nav-links {
 display: flex;
 gap: 20px;
 }
 .footer .nav-links a {
-color: white;
+    color: black;
 text-decoration: none;
 font-size: 16px;
 }
@@ -288,7 +287,7 @@ gap: 20px;
 
 }
 .footer .social-ic a {
-color: white;
+color: black;
 font-size: 22px;
 
 }
@@ -305,7 +304,7 @@ flex: 1;
 padding: 3px;
 }
 .footer .bottom-text a {
-color: white;
+    color: black;
 text-decoration: none;
 }
 .bottom-text #copyright{
