--- a/Contact-Us/Contact.css
+++ b/Contact-Us/Contact.css
@@ -166,8 +166,8 @@ text-decoration: none;
 
 
 .footer {
-background-color: rgba(0, 0, 0, 0.938);
-color: white;
+background-color: rgb(246,241,237);
+color: black;
 padding: 20px 0;
 
 }
@@ -180,16 +180,15 @@ max-width: 90%;
 margin: 0 auto;
 padding: 0 20px;
 }
-.footer .logo {
-font-size: 40px;
-font-weight: bold;
+.footer .logo img {
+height: 50px;
 }
 .footer .nav-links {
 display: flex;
 gap: 20px;
 }
 .footer .nav-links a {
-color: white;
+    color: black;
 text-decoration: none;
 font-size: 16px;
 }
@@ -199,7 +198,7 @@ gap: 20px;
 
 }
 .footer .social-ic a {
-color: white;
+    color: black;
 font-size: 22px;
 
 }
@@ -216,7 +215,7 @@ flex: 1;
 padding: 3px;
 }
 .footer .bottom-text a {
-color: white;
+    color: black;
 text-decoration: none;
 }
 .bottom-text #copyright{
