--- a/Home/style2.css
+++ b/Home/style2.css
@@ -498,8 +498,8 @@
   
   
   .footer {
-    background-color: rgba(0, 0, 0, 0.938);
-    color: white;
+    background-color: rgb(246,241,237);
+    color: black;
     padding: 20px 0;
     
   }
@@ -512,16 +512,15 @@
     margin: 0 auto;
     padding: 0 20px;
   }
-  .footer .logo {
-    font-size: 40px;
-    font-weight: bold;
+  .footer .logo img{
+    height: 40px; 
   }
   .footer .nav-links {
     display: flex;
     gap: 20px;
   }
   .footer .nav-links a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 16px;
   }
@@ -531,7 +530,7 @@
    
   }
   .footer .social-icons a {
-    color: white;
+    color: black;
     font-size: 22px;
     
   }
@@ -548,7 +547,7 @@
     padding: 3px;
   }
   .footer .bottom-text a {
-    color: white;
+    color: black;
     text-decoration: none;
   }
   .bottom-text #copyright{
