--- a/Service-page/service.css
+++ b/Service-page/service.css
@@ -203,8 +203,8 @@ body {
 
 
 .footer {
-    background-color: rgba(0, 0, 0, 0.941);
-    color: white;
+    background-color: rgb(246,241,237);
+    color: black;
     padding: 20px 0;
     
   }
@@ -217,16 +217,15 @@ body {
     margin: 0 auto;
     padding: 0 20px;
   }
-  .footer .logo {
-    font-size: 40px;
-    font-weight: bold;
+  .footer .logo img {
+    height: 50px;
   }
   .footer .nav-links {
     display: flex;
     gap: 20px;
   }
   .footer .nav-links a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 16px;
   }
@@ -236,7 +235,7 @@ body {
    
   }
   .footer .social-ic a {
-    color: white;
+    color: black;
     font-size: 22px;
     
   }
@@ -253,7 +252,7 @@ body {
     padding: 3px;
   }
   .footer .bottom-text a {
-    color: white;
+    color: black;
     text-decoration: none;
   }
   .bottom-text #copyright{
