--- a/Subcontractor/Subcontractor.css
+++ b/Subcontractor/Subcontractor.css
@@ -323,8 +323,8 @@ text-decoration: none;
 
 
 .footer {
-background-color: rgba(0, 0, 0, 0.941);
-color: white;
+background-color: rgb(246,241,237);
+color: black;
 padding: 20px 0;
 
 }
@@ -337,16 +337,15 @@ max-width: 90%;
 margin: 0 auto;
 padding: 0 20px;
 }
-.footer .logo {
-font-size: 40px;
-font-weight: bold;
+.footer .logo img {
+height: 50px;
 }
 .footer .nav-links {
 display: flex;
 gap: 20px;
 }
 .footer .nav-links a {
-color: white;
+    color: black;
 text-decoration: none;
 font-size: 16px;
 }
@@ -356,7 +355,7 @@ gap: 20px;
 
 }
 .footer .social-ic a {
-color: white;
+    color: black;
 font-size: 22px;
 
 }
@@ -373,7 +372,7 @@ flex: 1;
 padding: 3px;
 }
 .footer .bottom-text a {
-color: white;
+    color: black;
 text-decoration: none;
 }
 .bottom-text #copyright{
